--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     </main>
 
     <footer>
-        <p>2024 SaveSilentSeas.org | <a href="about_us.html">Contact Us</a></p>
+        <p>2024 SaveSilentSeas.org | <a href="contact.html">Contact Us</a></p>
     </footer>
 </body>
 </html>
