--- a/Effect on Marine Life.html
+++ b/Effect on Marine Life.html
@@ -55,7 +55,7 @@
         </p>
       </div>
       <div class="ecosystem-box" style="flex: 1 1 280px; max-width: 300px; padding: 20px; text-align: center; border-radius: 10px; background: #ffffff; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1); transition: transform 0.3s ease, box-shadow 0.3s ease;">
-        <img src="seaweed.jpg" alt="Seaweed Beds" style="width: 50px; height: 50px; margin-bottom: 15px;">
+        <img src="Seaweed.jpg" alt="Seaweed Beds" style="width: 50px; height: 50px; margin-bottom: 15px;">
         <h4 style="color: #005f73; font-size: 1.6rem;">Seaweed Beds</h4>
         <p style="font-size: 1rem; color: #333;">
           Seaweed beds that are essential for nutrient cycling can be smothered by plastic, reducing their ability to support marine life and contribute to a healthy ocean.
