--- a/Global Initiatives.html
+++ b/Global Initiatives.html
@@ -79,4 +79,7 @@
                 </p>
             </div>
             <div class="solution-box" style="flex: 1 1 280px; max-width: 300px; padding: 20px; text-align: center; border-radius: 10px; background: #ffffff; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1); transition: transform 0.3s ease, box-shadow 0.3s ease;">
-                <h4 style="
+                <h4 style="color: #005f73; font-size: 1.6rem;">Encourage Corporate Responsibility</h4>
+                <p style="font-size: 1rem; color: #333;">
+                    Extended producer responsibility should be implemented, companies producing plastic products should bear responsibility for managing their products’ end-of-life impacts.
+                </p>
