--- a/contact.html
+++ b/contact.html
@@ -51,21 +51,21 @@
     <p>We'd love to hear from you! Please feel free to reach out to any of our team members listed below.</p>
 
     <div class="contact-info">
-        <h3>Navkiran Kaur</h3>
-        <p>Email: navkiran@example.com</p>
-        <p>Phone: (123) 456-7890</p>
+        <h3>Navkiran Kaur Brar</h3>
+        <p>Email: navkiranbrar@my.capilanou.ca</p>
+        <p>Phone: (978) 118-****</p>
     </div>
 
     <div class="contact-info">
         <h3>Shivdeep Kaur</h3>
-        <p>Email: shivdeep@example.com</p>
-        <p>Phone: (234) 567-8901</p>
+        <p>Email: shivdeep2@my.capilanou.ca</p>
+        <p>Phone: (604) 652-****</p>
     </div>
 
     <div class="contact-info">
         <h3>Jaspreet Singh</h3>
-        <p>Email: jaspreet@example.com</p>
-        <p>Phone: (345) 678-9012</p>
+        <p>Email: jasnpreetsingh@my.capilanou.ca</p>
+        <p>Phone: (672) 866-****</p>
     </div>
 
     <p>If you have any questions or comments, feel free to reach out to us through any of the above contacts. We look forward to connecting with you!</p>
