--- a/Global Initiatives.html
+++ b/Global Initiatives.html
@@ -83,3 +83,4 @@
                 <p style="font-size: 1rem; color: #333;">
                     Extended producer responsibility should be implemented, companies producing plastic products should bear responsibility for managing their products’ end-of-life impacts.
                 </p>
+            </div>
