--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,8 @@
 <section>
     <h2>Get in Touch</h2>
     <p>We'd love to hear from you! Please feel free to reach out to any of our team members listed below.</p>
-
+    
+ <div style="display: flex; flex-wrap: wrap; justify-content: space-around; gap: 20px;">
      <div class="contact-info" style="flex: 1 1 280px; max-width: 300px; padding: 20px; text-align: center; border-radius: 10px; background: #ffffff; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1); transition: transform 0.3s ease, box-shadow 0.3s ease;">
                 <h4 style="color: #005f73; font-size: 1.6rem;">Navkiran Kaur Brar</h4>
                 <p style="font-size: 1rem; color: #333;">
@@ -57,7 +58,7 @@
                     <p>Phone: (978) 118-****</p>
                 </p>
     </div>
-
+ 
      <div class="contact-info" style="flex: 1 1 280px; max-width: 300px; padding: 20px; text-align: center; border-radius: 10px; background: #ffffff; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1); transition: transform 0.3s ease, box-shadow 0.3s ease;">
                 <h4 style="color: #005f73; font-size: 1.6rem;">Shivdeep Kaur</h4>
                 <p style="font-size: 1rem; color: #333;">
@@ -65,7 +66,7 @@
                     <p>Phone: (604) 652-****</p>
                 </p>
     </div>
-
+ 
      <div class="contact-info" style="flex: 1 1 280px; max-width: 300px; padding: 20px; text-align: center; border-radius: 10px; background: #ffffff; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1); transition: transform 0.3s ease, box-shadow 0.3s ease;">
                 <h4 style="color: #005f73; font-size: 1.6rem;">Jaspreet Singh</h4>
                 <p style="font-size: 1rem; color: #333;">
@@ -73,7 +74,8 @@
                     <p>Phone: (672) 866-****</p>
                 </p>
     </div>
-
+ </div>
+     
     <p>If you have any questions or comments, feel free to reach out to us through any of the above contacts. We look forward to connecting with you!</p>
 </section>
 
