--- a/blog.html
+++ b/blog.html
@@ -56,7 +56,7 @@
     <div class="blog-post">
         <h3>1. The Impact of Plastic Pollution on Marine Life</h3>
         <p>Discover how plastic waste affects marine ecosystems and the species that inhabit our oceans.</p>
-        <a href="#">Read More</a>
+        <a href="blog_1.html">Read More</a>
     </div>
 
     <div class="blog-post">
