--- a/blog.html
+++ b/blog.html
@@ -62,13 +62,13 @@
     <div class="blog-post">
         <h3>2. Simple Changes for a Sustainable Lifestyle</h3>
         <p>Learn about easy adjustments you can make in your daily routine to reduce plastic waste.</p>
-        <a href="#">Read More</a>
+        <a href="blog_2.html">Read More</a>
     </div>
 
     <div class="blog-post">
         <h3>3. How Clean-Up Efforts Are Making a Difference</h3>
         <p>Read about successful beach clean-up initiatives and how volunteers are helping our oceans.</p>
-        <a href="#">Read More</a>
+        <a href="blog_3.html">Read More</a>
     </div>
 
     <div class="blog-post">
