--- a/blog.html
+++ b/blog.html
@@ -74,7 +74,7 @@
     <div class="blog-post">
         <h3>4. Innovations in Plastic Alternatives</h3>
         <p>Explore the latest developments in sustainable materials and their potential to reduce plastic waste.</p>
-        <a href="#">Read More</a>
+        <a href="blog_4.html">Read More</a>
     </div>
 
     <h2>Join the Conversation!</h2>
