--- a/about_us.html
+++ b/about_us.html
@@ -57,7 +57,7 @@
     <h2>Blog</h2>
     <p><strong>How to Reduce Plastic Waste</strong></p>
     <p>Stay informed and inspired! Our blog features articles on the latest news, research, and tips on reducing plastic pollution. Learn about innovative solutions, personal stories from our volunteers, and how you can take action. Explore topics ranging from sustainable living to marine wildlife conservation.</p>
-    <p><a href="#">Read more about how to get involved!</a></p>
+    <p><a href="join.html">Read more about how to get involved!</a></p>
 
     <h2>Get Involved</h2>
     <p>Here’s how you can help in the fight against plastic pollution:</p>
